data/issues_nolabel/nolabel_test_5095.txt
Error in build phase (iOS and Android sample)

Hi,
I followed all the instructions to build the iOS sample app but I encountered many errors like this:
./tensorflow/core/framework/types.h:112:48: error: unknown type name 'DataType'
inline bool TypesCompatible(DataType expected, DataType actual) {
                                               ^
./tensorflow/core/framework/types.h:142:11: error: unknown type name 'DataType'
template <DataType VALUE>

and all in the same file: types.h
I dind't found anything on the web (or Stackoverflow) about these errors.
Environment info
Operating System: MacOS Sierra version 10.12 (16A323)
I used Docker quickstart terminal to run tensorflow and build the apps.
Also with the Android sample app I have the same issues.
I followed also this blog and all the instruction here in the github project, but I receive the same errors also opening the project with xCode Version 8.0 (8A218a).
Could you please help me to understand how to solve the problem with the DataType?
Thanks
Fabio